# kai

./: README.md  license.txt  pyproject.toml
kai/: api.py  crewbuilder.py  frappe_tools.py  hooks.py  kai_tools.py  modules.txt  toolbuilder.py
kai/kai/doctype/kai_agent/: kai_agent.js  kai_agent.json  kai_agent.py  test_kai_agent.py
kai/kai/doctype/kai_agent_tool/: kai_agent_tool.json  kai_agent_tool.py
kai/kai/doctype/kai_crew/: kai_crew.js  kai_crew.json  kai_crew.py  test_kai_crew.py
kai/kai/doctype/kai_crew_agent/: kai_crew_agent.json  kai_crew_agent.py
kai/kai/doctype/kai_crew_task/: kai_crew_task.json  kai_crew_task.py
kai/kai/doctype/kai_job/: kai_job.js  kai_job.json  kai_job.py  test_kai_job.py
kai/kai/doctype/kai_llm/: kai_llm.js  kai_llm.json  kai_llm.py  test_kai_llm.py
kai/kai/doctype/kai_settings/: kai_settings.js  kai_settings.json  kai_settings.py  test_kai_settings.py
kai/kai/doctype/kai_task/: kai_task.js  kai_task.json  kai_task.py  test_kai_task.py
kai/kai/doctype/kai_task_context_task/: kai_task_context_task.json  kai_task_context_task.py
kai/kai/doctype/kai_task_tool/: kai_task_tool.json  kai_task_tool.py
kai/kai/doctype/kai_tool/: kai_tool.js  kai_tool.json  kai_tool.py  test_kai_tool.py
